--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <hr>
             <a href="mailto:info@example.com" class="email">
                 <i class="far fa-envelope"></i>
-                info@example.com
+                osamahima018@gmail.com
             </a>
         </div>
     </footer>
